# django_code_sharing

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: manage.py
src/snippet/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
src/snippet/api/: serializers.py  urls.py  views.py
src/snippet/migrations/: 0001_initial.py  0002_auto_20200409_0945.py  0003_snippet_title.py  0004_snippet_source.py
src/snippet/templates/: snippet.detail.html  snippet.html
src/snippets/: asgi.py  urls.py  wsgi.py
src/snippets/settings/: __init__.py  base.py  dev.py
src/snippets/static/css/: overrides.css
src/snippets/static/js/: activity-bar.js  main.js
src/snippets/templates/layout/: base.html
src/snippets/templates/partials/: activitybar.partial.html
