[tool.poetry]
name = "snipp.codes"
version = "0.1.0"
description = ""
authors = ["Ben Cleary <me@bencleary.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
djangorestframework = "^3.11.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-django = "^3.9.0"
mixer = "^6.1.3"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
